--- a/index.html
+++ b/index.html
@@ -7,6 +7,49 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#recipes">Recipes</a>
+        <a href="#">About</a>
+      </nav>
+      <img src="_consigne/images/granola.jpg" alt="granola">
+      <p class="recipe-tag">
+        recipe of the day
+      </p>
+      <h1>
+        Cherry-Almond Granola Crisp
+      </h1>
+      <p class="recipe-intro">
+        Eat this simple, juicy dish for breakfast or dessert.
+      </p>
+      <p class="recipe-name">
+        Jerelle Guy
+      </p>
+    </header>
+    <main>
+      <div>
+        <h2 id="recipes">
+          What to cook this week
+        </h2>
+        <figure>
+          <img src="_consigne/images/filipino_recipes.jpg" alt="gateau">
+          <figcaption>
+            Angela Dimayuga's 10 Essential Filipino Recipes
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="_consigne/images/summer_pastas.jpg" alt="pates">
+          <figcaption>
+            47 Bright and Beautiful Summer Pastas
+          </figcaption>
+        </figure>
+      </div>
+      <footer>
+        
+      </footer>
+
+    </main>
+
   </body>
 </html>
