--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <title>Cook With Us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Sorts+Mill+Goudy:ital@0;1&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="start-container">
         <a href="#">Home</a>
         <a href="#recipes">Recipes</a>
-        <a href="#">About</a>
+        <a href="#about">About</a>
       </nav>
       <img src="_consigne/images/granola.jpg" alt="granola">
       <p class="recipe-tag">
-        recipe of the day
+        RECIPE OF THE DAY
       </p>
       <h1>
         Cherry-Almond Granola Crisp
@@ -24,7 +27,7 @@
         Eat this simple, juicy dish for breakfast or dessert.
       </p>
       <p class="recipe-name">
-        Jerelle Guy
+        JERELLE GUY
       </p>
     </header>
     <main>
@@ -32,6 +35,7 @@
         <h2 id="recipes">
           What to cook this week
         </h2>
+        <hr>
         <figure>
           <img src="_consigne/images/filipino_recipes.jpg" alt="gateau">
           <figcaption>
@@ -45,11 +49,16 @@
           </figcaption>
         </figure>
       </div>
-      <footer>
-        
-      </footer>
-
     </main>
-
+    <footer>
+      <h3 id="about">
+        Learn more 
+      </h3>
+      <nav>
+        <a href="#">Our Cooks</a>
+        <a href="#">See our features</a>
+        <a href="#">FAQ</a>
+      </nav>
+    </footer>
   </body>
 </html>
