--- a/index.html
+++ b/index.html
@@ -37,16 +37,20 @@
         </h2>
         <hr>
         <figure>
-          <img src="_consigne/images/filipino_recipes.jpg" alt="gateau">
-          <figcaption>
-            Angela Dimayuga's 10 Essential Filipino Recipes
-          </figcaption>
+          <div class="recipe-border">
+            <img src="_consigne/images/filipino_recipes.jpg" alt="gateau">
+            <figcaption>
+              Angela Dimayuga's 10 Essential Filipino Recipes
+            </figcaption>
+          </div>
         </figure>
         <figure>
-          <img src="_consigne/images/summer_pastas.jpg" alt="pates">
-          <figcaption>
-            47 Bright and Beautiful Summer Pastas
-          </figcaption>
+          <div class="recipe-border">
+            <img src="_consigne/images/summer_pastas.jpg" alt="pates">
+            <figcaption>
+              47 Bright and Beautiful Summer Pastas
+            </figcaption>
+          </div>
         </figure>
       </div>
     </main>
@@ -54,7 +58,7 @@
       <h3 id="about">
         Learn more 
       </h3>
-      <nav>
+      <nav class="end-container">
         <a href="#">Our Cooks</a>
         <a href="#">See our features</a>
         <a href="#">FAQ</a>
