--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Cook With Us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Sorts+Mill+Goudy:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Sorts+Mill+Goudy:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -16,29 +19,21 @@
         <a href="#recipes">Recipes</a>
         <a href="#about">About</a>
       </nav>
-      <img src="_consigne/images/granola.jpg" alt="granola">
-      <p class="recipe-tag">
-        RECIPE OF THE DAY
-      </p>
-      <h1>
-        Cherry-Almond Granola Crisp
-      </h1>
+      <img src="_consigne/images/granola.jpg" alt="granola" />
+      <p class="recipe-tag">RECIPE OF THE DAY</p>
+      <h1>Cherry-Almond Granola Crisp</h1>
       <p class="recipe-intro">
         Eat this simple, juicy dish for breakfast or dessert.
       </p>
-      <p class="recipe-name">
-        JERELLE GUY
-      </p>
+      <p class="recipe-name">JERELLE GUY</p>
     </header>
     <main>
       <div>
-        <h2 id="recipes">
-          What to cook this week
-        </h2>
-        <hr>
+        <h2 id="recipes">What to cook this week</h2>
+        <hr />
         <figure>
           <div class="recipe-border">
-            <img src="_consigne/images/filipino_recipes.jpg" alt="gateau">
+            <img src="_consigne/images/filipino_recipes.jpg" alt="gateau" />
             <figcaption>
               Angela Dimayuga's 10 Essential Filipino Recipes
             </figcaption>
@@ -46,18 +41,14 @@
         </figure>
         <figure>
           <div class="recipe-border">
-            <img src="_consigne/images/summer_pastas.jpg" alt="pates">
-            <figcaption>
-              47 Bright and Beautiful Summer Pastas
-            </figcaption>
+            <img src="_consigne/images/summer_pastas.jpg" alt="pates" />
+            <figcaption>47 Bright and Beautiful Summer Pastas</figcaption>
           </div>
         </figure>
       </div>
     </main>
     <footer>
-      <h3 id="about">
-        Learn more 
-      </h3>
+      <h3 id="about">Learn more</h3>
       <nav class="end-container">
         <a href="#">Our Cooks</a>
         <a href="#">See our features</a>
